networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-laravel-ingress
spec:
  rules:
    - host: bonvoyage.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 80
